--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - img/heru_logo.jpg
     - img/sijuki putih.png
     - img/sijuki merah.png
+    - img/noprofile.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
