--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   image_picker: ^0.6.7+4
   date_format: ^1.0.8
   firebase_storage: ^3.1.3
+  file_picker: ^1.13.0+1
+  flutter_plugin_pdf_viewer: ^1.0.7
 
 dev_dependencies:
   flutter_test:
