--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_storage: ^3.1.3
   file_picker: ^1.13.0+1
   flutter_plugin_pdf_viewer: ^1.0.7
+  flutter_downloader: ^1.5.1
+  permission_handler: ^4.4.0
+  ext_storage: ^1.0.3
+  dio: ^3.0.10
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
